@@ -1,5 +1,6 @@
 # Head
 
+- When pruning cells, now checks for circular references
 - Added a better error message if expanding array formulae fails
 
 # 0.2.25 - 2014 May 23rd
